# zephyr

drivers/: CMakeLists.txt  Kconfig
drivers/audio/: CMakeLists.txt  Kconfig  Kconfig.sun8i_v3s_codec  sun8i_v3s_codec.c  sun8i_v3s_codec.h
drivers/clock_control/: CMakeLists.txt  Kconfig  Kconfig.sun8i  clock_control_sun20i_d1.c  clock_control_sun8i_de2.c  clock_control_sun8i_v3s.c
drivers/counter/: CMakeLists.txt  Kconfig  Kconfig.sun8i_v3s_timer  counter_sun8i_v3s_timer.c
drivers/crypto/: CMakeLists.txt  Kconfig  Kconfig.sun8i-v3s  crypto_sun8i_v3s.c  crypto_sun8i_v3s_priv.h
drivers/display/: CMakeLists.txt  Kconfig  Kconfig.sun8i-de2  display_sun8i_de2_mixer.c  display_sun8i_de2_mixer_regs.h  display_tcon_sun8i_v3s.c  tcon_sun8i_v3s.h
drivers/dma/: CMakeLists.txt  Kconfig  Kconfig.sun8i_v3s  dma_sun8i_v3s.c  dma_sun8i_v3s.h
drivers/entropy/: CMakeLists.txt  Kconfig  Kconfig.sun8i-v3s  entropy_sun8i_v3s.c
drivers/ethernet/: CMakeLists.txt  Kconfig  Kconfig.sun8i_v3s_emac  eth_stm32_hal_common.c  eth_stm32_hal_priv.h  eth_sun8i_v3s_emac.c  eth_sun8i_v3s_emac_priv.h
drivers/gpio/: CMakeLists.txt  Kconfig  Kconfig.sun20i_d1  Kconfig.sun8i_v3s  Kconfig.tca9554  gpio_sun20i_d1.c  gpio_sun8i_v3s.c  gpio_tca9554.c
drivers/hwspinlock/: CMakeLists.txt  Kconfig  Kconfig.sun6i  sun6i_hwspinlock.c
drivers/i2c/: CMakeLists.txt  Kconfig  (+2 more)
drivers/usb/common/musb/: CMakeLists.txt  Kconfig  musb_core.c  musb_core.h  musb_regs.h
drivers/usb/common/musb/glue/: CMakeLists.txt  Kconfig
drivers/usb/common/musb/glue/sunxi/: CMakeLists.txt  Kconfig  sunxi.c
(+315 files in other folders)
